# tapeExternSort

./: CMakeLists.txt  Tape.cpp  Tape.hpp  main.cpp
Config/: Config.cpp  Config.hpp
Factory/: MagneticHeadFactory.cpp  MagneticHeadFactory.hpp
MagneticHead/: IMagneticHead.hpp  MagneticHead.cpp  MagneticHead.hpp
Sort/: ISort.hpp  MergeSort.cpp  MergeSort.hpp  ShackerSort.cpp  ShackerSort.hpp  SortManager.cpp  SortManager.hpp
Utils/: json.hpp
